feat: Добавил поддержку вебсокета с KUBE_DASHBOARD
