# clabgate/app/controllers/containers_controller.go
@@ -1,0 +1,47 @@
+package controllers
+
+import (
+	fiber "github.com/gofiber/fiber/v2"
+	"gitlab.com/a10869/api-modules/clabgate/app/di"
+	"gitlab.com/a10869/api-modules/clabgate/app/usecases"
+	"gitlab.com/a10869/api-modules/clabgate/app/usecases/auth"
+	"gitlab.com/a10869/api-modules/shared/logs"
+	"gitlab.com/a10869/api-modules/shared/utils"
+)
+
+// ContainersDeviceGet func for device describe by name.
+// @Description Describe device topology
+// @Summary describe device topology
+// @Tags Device
+// @Accept json
+// @Produce json
+// @Param form body usecases.ContainersGetInputDTO true "topology namespace"
+// @Success 200 {object} usecases.ContainersGetResponse
+// @Security ApiKeyAuth
+// @Router /v1/containers/get [post]
+func ContainersDeviceGet(c *fiber.Ctx) error {
+	user, err := auth.ExtractTokenMetadata(c, []string{})
+	if err != nil {
+		return err
+	}
+	diLoggerConf := logs.NewZeroLoggerConf(c)
+	dto := usecases.ContainersGetInputDTO{}
+	err = utils.FiberValidatorBase(c, &dto)
+	if err != nil {
+		return err
+	}
+	container, err := di.NewDIContainer(diLoggerConf)
+	if err != nil {
+		return err
+	}
+	defer container.Close()
+	uc, err := container.ContainersGetUC()
+	if err != nil {
+		return err
+	}
+	output, err := uc.SetContext(user).Execute(dto)
+	if err != nil {
+		return err
+	}
+	return utils.FiberSuccessResponse{Result: output}
+}
